# FastAPI-Celery-NotificationService

./: LICENSE  README.md  main.py  pyproject.toml
app/: debug.py  main.py  security.py
app/api/: api.py
app/api/endpoints/: cart.py  order.py  product.py  users.py
app/core/: celery_conf.py  settings.py
app/db/: register.py
app/db/models/: __init__.py  cart.py  order.py  order_product.py  product.py  role.py  user.py
app/schemas/: cart.py  order.py  order_product.py  product.py  role.py  token.py  user.py
app/service/: base_service.py  cart_service.py  order_product_service.py  order_service.py  product_service.py  role_service.py  user_service.py
app/workers/: __init__.py  genai_worker.py  send_email.py
app/workers/templates/: email_template.html
docker/: Dockerfile  docker-compose.yaml
related/: architecture.excalidraw
